# full_ritmo

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  ritmo.db  ritmo.db.sqbpro
.zed/: debug.json  tasks.json
doc_AI/: Lifetimes in Rust_ Identificatori e proprietà · GitHub Copilot.html  Rust Workspace for Calibre-like App.epub  Rust Workspace for Calibre-like App.txt  SQLite database optimization.epub  ciccia.md  ciccia.txt  library file management system.epub  library file management system.txt
ebook_parser/: Cargo.toml
ritmo_cli/: Cargo.toml
ritmo_cli/src/: main.rs
ritmo_core/: Cargo.toml
ritmo_core/src/: lib.rs  storage.rs  utils.rs
ritmo_core/src/dto/: alias_dto.rs  book_content_dto.rs  book_dto.rs  content_dto.rs  language_dto.rs  mod.rs  people_dto.rs  publishers_dto.rs  tags_dto.rs
ritmo_core/src/service/: entity_resolver.rs  mod.rs  storage_service.rs
ritmo_core/src/services/: book_service.rs  mod.rs
ritmo_core/tests/: lib_test.rs
ritmo_db/: Cargo.toml  ritmo.db  ritmo.db.sql
ritmo_db/assets/: template.db
ritmo_db/examples/: add_book.rs
ritmo_db/migrations/: 20250716100238_init.sql  20250729065149_new_lang.sql  20250729065823_remove_rating_and_read_status.sql  20250811092558_metadata.sql
ritmo_db/schema/: schema.sql
ritmo_db/src/: connection.rs  database.rs  lib.rs  models.rs  path.rs
ritmo_db/src/dto/: mod.rs
ritmo_db/src/models/: aliases.rs  books.rs  books_contents.rs  books_people.rs  books_people_roles.rs  books_tags.rs  books_types.rs  contents.rs  contents_languages.rs  contents_people.rs  contents_people_roles.rs  contents_tags.rs  formats.rs  full_book.rs  languages.rs  mod.rs  people.rs  publishers.rs  relations.rs  roles.rs  running_languages.rs  series.rs  tags.rs  types.rs  x_books_contents.rs  x_books_people_roles.rs  x_books_tags.rs  x_contents_languages.rs  x_contents_people_roles.rs  x_contents_tags.rs
ritmo_db/tests/: aliases_test.rs  book_persistence_test.rs  books_contents_test.rs  books_people_roles_test.rs  books_tags_test.rs  books_test.rs  contents_languages_test.rs  contents_people_roles_test.rs  contents_tags_test.rs  contents_test.rs  database_test.rs  formats_test.rs  integration_tests.rs  people_test.rs  publishers_test.rs  roles_test.rs  running_languages_test.rs  series_test.rs  tags_test.rs  types_test.rs
ritmo_db_core/: Cargo.toml
ritmo_db_core/examples/: bootstrap.rs
ritmo_db_core/src/: database.rs  lib.rs  library.rs
ritmo_db_core/src/config/: mod.rs  optimizations.rs
ritmo_db_core/src/connection/: mod.rs  options.rs  pool.rs
ritmo_db_core/src/maintenance/: backup.rs  integrity.rs  mod.rs  vacuum.rs
ritmo_db_core/tests/: config_tests.rs  connection_tests.rs  database_tests.rs  database_tests.rs___  integration_tests.rs  maintenance_tests.rs
ritmo_debug_cli/: Cargo.toml
ritmo_errors/: Cargo.toml
ritmo_errors/src/: lib.rs
ritmo_formats/: Cargo.toml
ritmo_gui/: Cargo.toml
ritmo_ml/: Cargo.toml
ritmo_ml/src/: core.rs  entity_learner.rs  entity_persistence.rs  feedback.rs  generic.rs  lib.rs  traits.rs  utils.rs
ritmo_ml/src/people/: mod.rs  parse_names.rs  record.rs
ritmo_ml/src/publishers/: record.rs
ritmo_ml/src/series/: record.rs
ritmo_ml/src/tags/: record.rs
ritmo_search/: Cargo.toml
ritmo_sync/: Cargo.toml
