[workspace]
members = [
    "ritmo_core", # Logica principale e gestione ebook
    #    "ritmo_gui",       # Interfaccia grafica
    #    "ritmo_cli",       # Interfaccia command-line
    "ritmo_db", "ritmo_db_core", # Gestione database e metadata
    #    "ritmo_formats",   # Supporto formati (EPUB, PDF, MOBI, etc.)
    #    "ritmo_search",    # Sistema di ricerca e indicizzazione
    #    "ritmo_sync",      # Sincronizzazione e backup
    #    "ritmo_debug_cli",
    "ritmo_errors",
    #    "ritmo_ml",
    #    "ebook_parser",
]
resolver = "2"

# Dipendenze condivise per tutto il workspace
[workspace.dependencies]
serde_json = "1.0.141"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.46.1", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["laverdure <pierrot.bru@gmail.com>"]
repository = "https://github.com/pierrotbru/full-ritmo"
