[package]
name = "ritmo_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
ritmo_errors = { path = "../ritmo_errors" }
sha2 = "0.10.9"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
ritmo_db = { path = "../ritmo_db" }
tokio = { workspace = true, features = ["full"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
