[package]
name = "ritmo_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.98"
ritmo_errors = { path = "../ritmo_errors" }
ritmo_core = { path = "../ritmo_core" }
ritmo_db_core = { path = "../ritmo_db_core" }
sha2 = "0.10.9"
hex = "0.4.3"
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.20.0"
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
