[package]
name = "ritmo_db_core"
version = "0.1.0"
edition = "2021"
authors = ["pierrotbru"]
description = "Database infrastructure layer for Ritmo application"

[dependencies]
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate",
] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
ritmo_errors = { path = "../ritmo_errors" }
tracing = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serial_test = "3.2.0"
rand = "0.9.2"

[[example]]
name = "bootstrap"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.3"
