[package]
name = "ritmo_ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ritmo_errors = { path = "../ritmo_errors" } # Dipendenza dal tuo crate di errori
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
human_name = "2.0.4"
strsim = "0.11.1"
unicode-normalization = "0.1.24"

